togglable meow mode

--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -182,6 +182,14 @@ img {
   position: relative; display: block;
 }
 
+.meow {
+  display: none;
+}
+
+label {
+  font-size: 15px;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     background-color: #151515
